# strategy-dev

./: .gitignore  LICENSE.md  PROGRAM.md  README.md  pyproject.toml
src/strategy_dev/: __init__.py  backtest.py  data.py
